assets/style/style.css
/* ... */
.contactsList .addContactBtn:hover,
.contactsList .qrContactBtn:hover {
    background-color: #f2f2f24d;
}

.progress .progress-bar {
    background-image: none;
    background-color: #7000ab;
    width: 50% !important;
}

.nav-centered {
    display: flex;
    width: calc(100% - 150px);
    justify-content: center;
    margin-right: 150px
}

.modalMain {
    background-color: #221239;
}

.modal-dialog {
    padding-top: 100px;
    width: 380px;
}

.modal-content {
    border-radius: 10px;
    border: 1px solid #42117e;
}

.modal-title {
    color: #e9defb !important;
    font-size: 25px;
    margin-top: 22px;
}

.modalContents {
    margin-top: -14px;
}

.modalContents .topText {
    padding: 0px 39px;
    color: #AF9CC6;
    font-size: 16px;
    font-weight: 500;
    display: block;
}

.textGradientKeys {
    background: -webkit-linear-gradient(left, #9B21FB , #FC1DA0);
    background: -o-linear-gradient(right, #9B21FB, #FC1DA0);
    background: -moz-linear-gradient(right, #9B21FB, #FC1DA0);
    background: linear-gradient(to right, #9B21FB , #FC1DA0); 
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

    box-decoration-break: clone;
    -webkit-box-decoration-break: clone;
    font-weight: 600;
}

.rewardsBadge {
    background-color: #5811AB;
    border-radius: 8px;
    margin-left: 18px;
    padding: 4px 13px;
    position: relative;
    top: -2px;
}

.plus-icon,
.change-pwd-icon,
.del-wallet-icon {
    margin-right: 5px;
}



.plus-icon svg path,
.change-pwd-icon svg path,
.del-wallet-icon svg path {
    fill: #fff;
}

.gift-icon svg path {
    fill:#AF9CC6;
    margin-right: 4px;
}

.plus-icon svg {
    height: 15px;
}

.gift-icon svg {
    height: 15px;
    position: relative;
    top: -1px;
}

.change-pwd-icon svg,
.del-wallet-icon svg {
    height: 15px;
    position: relative;
    top: -2px;
}

.masternodeModalDialog {
    width: 800px;
}

textarea:focus-visible {
    outline:none;
}

textarea::placeholder {
    color:#A97DE8;
}

.masternodeModalDialog2 .modal-footer {
    width: 300px;
    padding-left: calc(50%);
}

.masternodeModalDialog2 .modal-footer button {
    margin-left:15px;
}

.masternodeModalDialog2 .modal-footer .pivx-button-outline {
    margin-right:15px;
}

@media (min-width: 576px) {
    .masternodeModalDialog {
        max-width: 800px;
    }
}

.transferBody {
    font: 14px 'Montserrat Regular';
    color: #AF9CC6;
    font-weight: 500;
}

.transferBody label,
.transferBody label {
    margin-left:5px;
    margin-bottom: 10px;
}

.tranferModal .input-group-text {
    background-color: #7f20ff;
    color: #E9DEFF;
    border: 2px solid #af9cc6;
    border-left: 0px;
}

.tranferModal .input-group-text:nth-child(2) {
    border: 2px solid #af9cc6;
}

.masternodeBadges {
    color: #000;
    font-weight: 600;
    padding: 5px 11px 5px 11px;
    border-radius: 6px;
}

.enabledBadge {
    background-color:#5FA800;
}

.preEnabledBadge {
    background-color:#A49DB2;
}

.missingBadge {
    background-color:#FF1D1D;
}

.masternodeTable tbody tr td {
    padding-top: 25px;
    padding-bottom: 25px;
}

.cameraIcon svg {
    height:22px;
    width:22px;
    fill:#e9deff;
}

.masternodeTable tbody tr td .wallet-code {
    width:fit-content!important;
    font-weight:600;
}

.masternodeTable tbody tr td .mnLastSeen {
    color:#76678D;
    font-weight:500;
}

.pColor svg {
    fill:#6410c7;
}
.wallet-code-new {
    background-color: #e9deff;
    color: #6410c7;
    border-radius: 7px;
    border: 1px solid #af9cc6;
    padding: 7px 10px;
    display:block;
}

.mnTopConfigured {
    display: flex;
    justify-content: center;
    margin-top: 33px;
    margin-bottom: 35px;
    color:#E9DEFF;
}

